--- a/sample-client/Dockerfile
+++ b/sample-client/Dockerfile
@@ -1,21 +1,21 @@
 # Build stage
-FROM node:20-alpine as builder
+FROM node:20-slim as builder
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci
+RUN rm -rf node_modules package-lock.json && npm install
 
 COPY . .
 RUN npm run build
 
 # Production stage
-FROM node:20-alpine
+FROM node:20-slim
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm install --only=production
 
 COPY --from=builder /app/dist ./dist
 COPY server.js ./
